--- a/aluraflix/styles.css
+++ b/aluraflix/styles.css
@@ -1,6 +1,53 @@
 body {
-    color:brown;
-    background-color:antiquewhite
-    
-    
+    color: brown;
+    background-color:antiquewhite;
+    margin: 0px;
+    font-family: "playfair display", serif;
+    margin-bottom: 50px;
+}
+
+header{
+    border-bottom: solid 2px whitesmoke;
+    padding: 20px;
+    font-size: 32px;
+    color: beige;
+}
+.texto-maior {
+    padding: 20px;
+    background-color: brown;
+    display: flex;
+    justify-content: center;
+}
+.video {
+    margin-left: 5%;
+}
+
+h1 {
+    font-size: 45px;
+}
+
+p {
+    font-size: 30px;
+}
+
+.music {
+    display:flex;
+    overflow-x: auto;
+    gap: 20px;
+}
+
+.music-maior {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.music img {
+    opacity: 0.50;
+    height: 250px;
+}
+
+.music img:hover {
+    opacity: 1.0;
+    height: 250px;
+    border: 2px solid brown;
 }
